--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <p class="calc__theme">theme</p>
         <div class="calc__header-btns">
             <input type="radio" id="btn1" name="button-1" value="30">
-            <label for="button-1"></label><br>
+            <label class="labels" for="button-1">1</label><br>
             <input type="radio" id="btn2" name="button-2" value="60">
-            <label for="button-1"></label><br>  
+            <label class="labels" for="button-1">2</label><br>  
             <input type="radio" id="btn3" name="button-3" value="100">
-            <label for="button-3"></label>
+            <label class="labels" for="button-3">3</label>
         </div>
       </div>
     </div>
