--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <label class="labels" for="button-1">2</label><br>  
             <input type="radio" id="btn3" name="button-3" value="100">
             <label class="labels" for="button-3">3</label>
+            <button class="toggleBtn" type="button"></button>
         </div>
       </div>
     </div>
