--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         </div>
       </div>
     </div>
-    <div class="calc__display">12</div>
+    <div class="calc__display">
+      <label for="calculation"></label>
+      <input type="text" id="calc__input" name="calculation">
+    </div>
   </div>
 </main>
 
