--- a/index.html
+++ b/index.html
@@ -34,8 +34,23 @@
       </div>
     </div>
     <div class="calc__display">
-      <label for="calculation"></label>
-      <input type="text" id="calc__input" name="calculation">
+      <!-- <label for="calculation"></label>
+      <input type="text" id="calc__input" name="calculation"> -->
+    </div>
+    <div class="calc__numberContainer">
+      <div class="row-1 rows">
+        <button class="seven keyStyle">7</button>
+        <button class="eight keyStyle">8</button>
+        <button class="nine keyStyle">9</button>
+        <button class="delete keyStyle delBtn">DEL</button>
+      </div>
+
+      <div class="row-2 rows">
+        <button class="four keyStyle">7</button>
+        <button class="five keyStyle">8</button>
+        <button class="six  keyStyle">9</button>
+        <button class="add  keyStyle plusBtn">+</button>
+      </div>
     </div>
   </div>
 </main>
