--- a/index.html
+++ b/index.html
@@ -46,10 +46,17 @@
       </div>
 
       <div class="row-2 rows">
-        <button class="four keyStyle">7</button>
-        <button class="five keyStyle">8</button>
-        <button class="six  keyStyle">9</button>
+        <button class="four keyStyle">4</button>
+        <button class="five keyStyle">5</button>
+        <button class="six  keyStyle">6</button>
         <button class="add  keyStyle plusBtn">+</button>
+      </div>
+
+      <div class="row-3 rows">
+        <button class="one keyStyle">1</button>
+        <button class="two keyStyle">2</button>
+        <button class="three  keyStyle">3</button>
+        <button class="subtract  keyStyle negBtn">-</button>
       </div>
     </div>
   </div>
