--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
         <button class="three  keyStyle">3</button>
         <button class="subtract  keyStyle negBtn">-</button>
       </div>
+
+      <div class="row-4 rows">
+        <button class="deci keyStyle">.</button>
+        <button class="zero keyStyle">0</button>
+        <button class="division  keyStyle">/</button>
+        <button class="multiply  keyStyle ">x</button>
+      </div>
+
+      <div class="row-5 ">
+        <button class="resetBtn keyStyle">RESET</button>
+        <button class="equalesBtn keyStyle">=</button>
+      </div>
     </div>
   </div>
 </main>
