--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Calculator app</title>
-
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,7 +15,7 @@
   <script defer src="/js/script.js"></script>
 </head>
 <body>
-<main class="calc">
+<main class="calc theme1">
   <div class="calc__container">
     <div class="calc__container-header">
       <h1 class="calc__container-logo">calc</h1>
