--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </style>
   <script defer src="/js/script.js"></script>
 </head>
-<body>
-<main class="calc theme1">
+<body class="theme1">
+<main class="calc">
   <div class="calc__container">
     <div class="calc__container-header">
       <h1 class="calc__container-logo">calc</h1>
