--- a/index.html
+++ b/index.html
@@ -38,31 +38,31 @@
     </div>
     <div class="calc__numberContainer">
       <div class="row-1 rows">
-        <button class="seven keyStyle">7</button>
-        <button class="eight keyStyle">8</button>
-        <button class="nine keyStyle">9</button>
+        <button class="seven keyStyle numsAndOperators">7</button>
+        <button class="eight keyStyle numsAndOperators">8</button>
+        <button class="nine keyStyle numsAndOperators">9</button>
         <button class="delete keyStyle delBtn">DEL</button>
       </div>
 
       <div class="row-2 rows">
-        <button class="four keyStyle">4</button>
-        <button class="five keyStyle">5</button>
-        <button class="six  keyStyle">6</button>
-        <button class="add  keyStyle plusBtn">+</button>
+        <button class="four keyStyle numsAndOperators">4</button>
+        <button class="five keyStyle numsAndOperators">5</button>
+        <button class="six  keyStyle numsAndOperators">6</button>
+        <button class="add  keyStyle plusBtn numsAndOperators">+</button>
       </div>
 
       <div class="row-3 rows">
-        <button class="one keyStyle">1</button>
-        <button class="two keyStyle">2</button>
-        <button class="three  keyStyle">3</button>
-        <button class="subtract  keyStyle negBtn">-</button>
+        <button class="one keyStyle numsAndOperators">1</button>
+        <button class="two keyStyle numsAndOperators">2</button>
+        <button class="three  keyStyle numsAndOperators">3</button>
+        <button class="subtract  keyStyle negBtn numsAndOperators">-</button>
       </div>
 
       <div class="row-4 rows">
-        <button class="deci keyStyle">.</button>
-        <button class="zero keyStyle">0</button>
-        <button class="division  keyStyle">/</button>
-        <button class="multiply  keyStyle ">x</button>
+        <button class="deci keyStyle numsAndOperators">.</button>
+        <button class="zero keyStyle numsAndOperators">0</button>
+        <button class="division  keyStyle numsAndOperators">/</button>
+        <button class="multiply  keyStyle  numsAndOperators">x</button>
       </div>
 
       <div class="row-5 ">
