--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </div>
     </div>
     <div class="calc__display">
-      <!-- <label for="calculation"></label>
-      <input type="text" id="calc__input" name="calculation"> -->
+     <div class="previous-operand"></div>
+     <div class="current-operand"></div>
     </div>
     <div class="calc__numberContainer">
       <div class="row-1 rows">
