--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div class="calc__display">
+    <div class="calc__display output">
      <div class="previous-operand"></div>
      <div class="current-operand"></div>
     </div>
