--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       </div>
     </div>
     <div class="calc__display output">
-     <div class="previous-operand"></div>
-     <div class="current-operand"></div>
+     <div class="previous-operand">898</div>
+     <div class="current-operand">098</div>
     </div>
     <div class="calc__numberContainer">
       <div class="row-1 rows">
