--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="calc__display output">
-     <div class="previous-operand">898</div>
+     <div class="previous-operand">89834333333333333333333333333333333333333</div>
      <div class="current-operand">098</div>
     </div>
     <div class="calc__numberContainer">
