--- a/index.html
+++ b/index.html
@@ -33,36 +33,36 @@
       </div>
     </div>
     <div class="calc__display output">
-     <div class="previous-operand">89834333333333333333333333333333333333333</div>
-     <div class="current-operand">098</div>
+     <div class="previous-operand"></div>
+     <div class="current-operand"></div>
     </div>
     <div class="calc__numberContainer">
       <div class="row-1 rows">
-        <button class="seven keyStyle numsAndOperators">7</button>
-        <button class="eight keyStyle numsAndOperators">8</button>
-        <button class="nine keyStyle numsAndOperators">9</button>
+        <button class="seven keyStyle numsAndOperators numBtn">7</button>
+        <button class="eight keyStyle numsAndOperators numBtn">8</button>
+        <button class="nine keyStyle numsAndOperators numBtn">9</button>
         <button class="delete keyStyle delBtn">DEL</button>
       </div>
 
       <div class="row-2 rows">
-        <button class="four keyStyle numsAndOperators">4</button>
-        <button class="five keyStyle numsAndOperators">5</button>
-        <button class="six  keyStyle numsAndOperators">6</button>
-        <button class="add  keyStyle plusBtn numsAndOperators">+</button>
+        <button class="four keyStyle numsAndOperators numBtn">4</button>
+        <button class="five keyStyle numsAndOperators numBtn">5</button>
+        <button class="six  keyStyle numsAndOperators numBtn">6</button>
+        <button class="add  keyStyle plusBtn numsAndOperators operationBtn">+</button>
       </div>
 
       <div class="row-3 rows">
-        <button class="one keyStyle numsAndOperators">1</button>
-        <button class="two keyStyle numsAndOperators">2</button>
-        <button class="three  keyStyle numsAndOperators">3</button>
-        <button class="subtract  keyStyle negBtn numsAndOperators">-</button>
+        <button class="one keyStyle numsAndOperators numBtn">1</button>
+        <button class="two keyStyle numsAndOperators numBtn">2</button>
+        <button class="three  keyStyle numsAndOperators numBtn">3</button>
+        <button class="subtract  keyStyle negBtn numsAndOperators operationBtn">-</button>
       </div>
 
       <div class="row-4 rows">
-        <button class="deci keyStyle numsAndOperators">.</button>
-        <button class="zero keyStyle numsAndOperators">0</button>
-        <button class="division  keyStyle numsAndOperators">/</button>
-        <button class="multiply  keyStyle  numsAndOperators">x</button>
+        <button class="deci keyStyle numsAndOperators numBtn">.</button>
+        <button class="zero keyStyle numsAndOperators numBtn">0</button>
+        <button class="division  keyStyle numsAndOperators operationBtn">/</button>
+        <button class="multiply  keyStyle  numsAndOperators operationBtn">x</button>
       </div>
 
       <div class="row-5 ">
