--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <button class="deci keyStyle numsAndOperators numBtn">.</button>
         <button class="zero keyStyle numsAndOperators numBtn">0</button>
         <button class="division  keyStyle numsAndOperators operationBtn">/</button>
-        <button class="multiply  keyStyle  numsAndOperators operationBtn">x</button>
+        <button class="multiply  keyStyle  numsAndOperators operationBtn">*</button>
       </div>
 
       <div class="row-5 ">
