--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="stylesheet" href="/sass/main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Calculator app</title>
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
   <script defer src="/js/script.js"></script>
 </head>
 <body class="theme0">
@@ -74,9 +68,8 @@
 </main>
 
   
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <footer class="attribution">
+    Coded by <a href="#">Manish</a>.
+  </footer>
 </body>
 </html>
