--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
       <div class="calc__header-themeContainer">
         <p class="calc__theme">theme</p>
         <div class="calc__header-btns">
-            <label class="labels"  for="button-1">1</label><br>
             <input type="radio" data-index="0" class="btnOptions" id="btn1" name="button-1" value="30">
-            <label class="labels"  for="button-2">2</label><br>
+            <label class="labels"  for="btn1">1</label><br>
             <input type="radio" data-index="1" class="btnOptions" id="btn2" name="button-2" value="60">
-            <label class="labels" for="button-3">3</label>
+            <label class="labels"  for="btn2">2</label><br>  
             <input type="radio" data-index="2" class="btnOptions" id="btn3" name="button-3" value="100">
+            <label class="labels" for="btn3">3</label>
             <button class="toggleBtn" type="button">??</button>
         </div>
       </div>
